--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link line">Портфолио</a>
             </li>
             <li class="menu-item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -75,25 +75,48 @@
           <div class="container-wrap">
             <ul class="section wrap list">
               <li class="item-portfolio">
-                <img
-                  src="./images/p1img.jpg"
-                  width="370"
-                  height="294"
-                  alt="вид веб-сайта"
-                />
-                <div class="text">
-                  <h3 class="section-titles">Технокряк</h3>
-                  <p class="job">Веб-сайт</p>
-                </div>
+                <a href="">
+                  <div class="foto">
+                    <img
+                      src="./images/p1img.jpg"
+                      width="370"
+                      height="294"
+                      alt="вид веб-сайта"
+                    />
+                    <div class="overlay">
+                      <p class="texno">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="text">
+                    <h3 class="section-titles">Технокряк</h3>
+                    <p class="job">Веб-сайт</p>
+                  </div>
+                </a>
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p2img.jpg"
                   width="370"
                   height="294"
                   alt="баскетболисты"
                 />
+                <div class="overlay">
+                  <p class="texno">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+                </div>
                 <div class="text">
                   <h3 class="section-titles">
                     Постер New Orlean vs Golden Star
@@ -103,12 +126,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p3img.jpg"
                   width="370"
                   height="294"
                   alt="ресторан-рыба"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Ресторан Seafood</h3>
                   <p class="job">Приложение</p>
@@ -116,12 +150,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p4img.jpg"
                   width="370"
                   height="294"
                   alt="наушники"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Проект Prime</h3>
                   <p class="job">Маркетинг</p>
@@ -129,12 +174,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p5img.jpg"
                   width="370"
                   height="294"
                   alt="коробки"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Проект Boxes</h3>
                   <p class="job">Приложение</p>
@@ -142,12 +198,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p6img.jpg"
                   width="370"
                   height="294"
                   alt="компьютер"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Inspiration has no Borders</h3>
                   <p class="job">Веб-сайт</p>
@@ -155,12 +222,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p7img.jpg"
                   width="370"
                   height="294"
                   alt="книга"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Издание Limited Edition</h3>
                   <p class="job">Дизайн</p>
@@ -168,12 +246,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p8img.jpg"
                   width="370"
                   height="294"
                   alt="бирка"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Проект LAB</h3>
                   <p class="job">Маркетинг</p>
@@ -181,12 +270,23 @@
               </li>
 
               <li class="item-portfolio">
+                <a href="">
+                  <div class="foto">
                 <img
                   src="./images/p9img.jpg"
                   width="370"
                   height="294"
                   alt="ноутбук"
                 />
+                  <div class="overlay">
+                    <p class="texno">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  </div>
                 <div class="text">
                   <h3 class="section-titles">Growing Business</h3>
                   <p class="job">Приложение</p>
@@ -224,7 +324,6 @@
             <li class="li-button">
               <a class="href-button white" href="">
                 <svg class="svg-button">
-                  width="20" height="20"
                   <use href="./images/sprite.svg#icon-instagram-1"></use>
                 </svg>
               </a>
@@ -233,7 +332,6 @@
             <li class="li-button">
               <a class="href-button white" href="">
                 <svg class="svg-button">
-                  width="20" height="20"
                   <use href="./images/sprite.svg#icon-beard-1"></use>
                 </svg>
               </a>
@@ -242,7 +340,6 @@
             <li class="li-button">
               <a class="href-button white" href="">
                 <svg class="svg-button">
-                  width="20" height="20"
                   <use href="./images/sprite.svg#icon-facebook-1"></use>
                 </svg>
               </a>
@@ -251,7 +348,6 @@
             <li class="li-button">
               <a class="href-button white" href="">
                 <svg class="svg-button">
-                  width="20" height="20"
                   <use href="./images/sprite.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
